--- a/src/app/pages/pay-method/pay-method.page.html
+++ b/src/app/pages/pay-method/pay-method.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+      <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-uppercase">{{"pay_method.payment_method" | translate}}</ion-title>
     <ion-buttons slot="end">
@@ -21,16 +21,16 @@
         <h3 [ngClass]="cash==1 ? 'tittle' : 'cash_heading' ">{{"pay_method.cash" | translate}}</h3>
       </div>
     </div>
-    <div class="online" [ngStyle]="{'background-color':online===1? 'var(--ion-color-green)'
+    <!-- <div class="online" [ngStyle]="{'background-color':online===1? 'var(--ion-color-green)'
     : 'var(--ion-color-white)' }" (click)="online=1 ;cash=0">
       <div class="img_div">
         <img [src]="online==1 ? ' assets/image/online-pay.png' : 'assets/image/credit-cards.png'" />
         <h3 [ngClass]="online==1 ? 'tittle' : 'cash_heading' ">{{"pay_method.online_pay" | translate}}</h3>
       </div>
-    </div>
-
+    </div> -->
   </div>
-  <div class="card_div ion-margin-horizontal" *ngIf="online==1">
+
+  <!-- <div class="card_div ion-margin-horizontal" *ngIf="online==1">
     <div class="online" (click)="payment_type='RAZOR'"
       [ngStyle]="{'background-color':payment_type==='RAZOR'? 'var(--ion-color-green)': 'var(--ion-color-white)' }">
       <div class="img_div">
@@ -45,7 +45,7 @@
         <h3 [ngClass]="payment_type==='PAYPAL' ? 'tittle' : 'cash_heading' ">{{"pay_method.PayPal" | translate}}</h3>
       </div>
     </div>
-  </div>
+  </div> -->
   <div>
 
   </div>
