--- a/src/app/pages/pay-method/pay-method.page.scss
+++ b/src/app/pages/pay-method/pay-method.page.scss
@@ -1,4 +1,18 @@
+ion-header {
+  background: #000;
+
+  ion-toolbar {
+    --background: transparent;
+  }
+
+  ion-title {
+    color: var(--ion-color-light);
+  }
+}
+
 ion-content {
+  --background: #000;
+
   .card_div {
     display: flex;
     margin-top: 40px;
