--- a/src/app/pages/restaurant-detail/restaurant-detail.page.html
+++ b/src/app/pages/restaurant-detail/restaurant-detail.page.html
@@ -33,7 +33,8 @@
                 <h3 class="review">{{'restaurant_detail_page.review' | translate}}</h3>
             </div>
         </div>
-        <h3 class="tittle">{{data?.itemNames}}</h3>
+        <h3 class="tittle">{{data?.description}}</h3>
+        <!-- <h3 class="tittle">{{data?.itemNames}}</h3> -->
         <p class="address">{{data?.address}}</p>
         <p class="open">
             {{'restaurant_detail_page.open_now' | translate}} <span>- {{data?.open_time}}-{{data?.close_time}} {{'restaurant_detail_page.mon_to_sun' | translate}} </span>
