--- a/src/app/pages/restaurant-detail/restaurant-detail.page.scss
+++ b/src/app/pages/restaurant-detail/restaurant-detail.page.scss
@@ -49,7 +49,8 @@ ion-content {
         border-bottom: dashed 1px var(--ion-border-color);
 
         .tittle {
-            font-size: 14px;
+            // font-size: 14px;
+            font-size: 16px;
             font-family: "Poppins-Medium";
             // color: var(--ion-color-darkBlue);
             color: var(--ion-color-white);
