--- a/src/app/pages/store/store.page.html
+++ b/src/app/pages/store/store.page.html
@@ -31,10 +31,10 @@
         </div>
         <p class="or_lbl">Groceries</p>
       </div> -->
-      <p class="away_lbl">
+      <!-- <p class="away_lbl">
         <ion-icon src="./assets/icon-image/gro_pin.svg"></ion-icon>
         {{item?.away}}
-      </p>
+      </p> -->
     </div>
   </div>
 </ion-content>
