--- a/src/app/pages/store/store.page.scss
+++ b/src/app/pages/store/store.page.scss
@@ -74,7 +74,7 @@ ion-content {
       .name {
         font-size: 18px;
         // color: var(--light-black-color);
-        color: var(--ion-colo-light);
+        color: var(--ion-color-light);
         font-family: "fivo-regular";
         margin-top: 0;
         margin-bottom: 5px;
