--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
-  [fullScreen] = true
->
-  <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
-
 <ion-app>
     <ion-split-pane contentId="main-content">
         <ion-menu contentId="main-content" type="overlay">
@@ -28,13 +18,15 @@
                     <div class="name_div">
                         <h3 color="light" class="name">{{userData?.name}}</h3>
                         <p class="location">
-                            <ion-icon color="light" src="assets/icon-image/location.svg"></ion-icon> {{userData?.location}}
+                            <ion-icon color="light" src="assets/icon-image/location.svg"></ion-icon>
+                            {{userData?.location}}
                         </p>
                     </div>
                 </div>
                 <ion-list class="ion-list">
                     <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-                        <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" [routerLinkActive]="['active','']" lines="none" detail="false" detail="false">
+                        <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" [routerLinkActive]="['active','']"
+                            lines="none" detail="false" detail="false">
                             <ion-icon slot="start" [src]="p.icon"></ion-icon>
                             <ion-label class="lbl_tittle">
                                 {{'side_menu.'+p.title | translate}}
@@ -48,17 +40,28 @@
                 <div class="footer_div">
                     <ion-label color="light" class="ion-float-right" (click)="Setting()">
                         <h3>
-                            <ion-icon color="light" src="../assets/icon-image/setting.svg"></ion-icon>{{'side_menu.Setting' | translate}}
+                            <ion-icon color="light" src="../assets/icon-image/setting.svg"></ion-icon>
+                            {{'side_menu.Setting' | translate}}
                         </h3>
                     </ion-label>
                     <ion-label color="light" (click)="logout()">
                         <h3>
-                            <ion-icon color="light" src="assets/icon-image/logout.svg"></ion-icon>{{'side_menu.Logout' | translate}}
+                            <ion-icon color="light" src="assets/icon-image/logout.svg"></ion-icon>
+                            {{'side_menu.Logout' | translate}}
                         </h3>
                     </ion-label>
                 </div>
             </ion-footer>
         </ion-menu>
-        <ion-router-outlet id="main-content"></ion-router-outlet>
+        <ion-router-outlet id="main-content">
+            <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-fussion"
+                [fullScreen]="false">
+                <p style="color: white"> Loading... </p>
+                </ngx-spinner>
+                <!-- <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple"
+                    [fullScreen]="true">
+                    <p style="font-size: 20px; color: white">Loading...</p>
+                </ngx-spinner> -->
+        </ion-router-outlet>
     </ion-split-pane>
 </ion-app>
