--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ ion-content {
 
   .back-btn {
     // --color: var(--ion-color-darkBlue);
-    --color: var(--ion-color-light)
+    --color: var(--ion-color-light);
     height: 19px;
     margin: 0;
   }
